# invoice-rs

./: .gitignore  Cargo.toml  README.md
src/: invoice.rs  main.rs
