[package]
name = "invoice-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
krilla = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ttf-parser = "0.25.1"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # better optimization, slower compile
strip = true        # strip symbols
panic = "abort"     # no unwinding tables
